// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<DeviceTile /> renders a device with no metadata 1`] = `
<div>
  <div
    class="mx_DeviceTile"
    data-testid="device-tile-123"
  >
    <div
      class="mx_DeviceTypeIcon"
    >
      <div
        class="mx_DeviceTypeIcon_deviceIconWrapper"
      >
        <svg
          aria-label="Unknown session type"
          class="mx_DeviceTypeIcon_deviceIcon"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 20q-.625 0-1.062-.437A1.45 1.45 0 0 1 2 18.5q0-.625.438-1.062A1.45 1.45 0 0 1 3.5 17H4V6q0-.824.588-1.412A1.93 1.93 0 0 1 6 4h14q.424 0 .712.287Q21 4.576 21 5t-.288.713A.97.97 0 0 1 20 6H6v11h4.5q.624 0 1.063.438.437.437.437 1.062t-.437 1.063A1.45 1.45 0 0 1 10.5 20zM15 20a.97.97 0 0 1-.713-.288A.97.97 0 0 1 14 19V9q0-.424.287-.713A.97.97 0 0 1 15 8h6q.424 0 .712.287Q22 8.576 22 9v10q0 .424-.288.712A.97.97 0 0 1 21 20zm1-3h4v-7h-4z"
          />
        </svg>
      </div>
      <svg
        aria-label="Unverified"
        class="mx_DeviceTypeIcon_verificationIcon unverified"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
        />
      </svg>
    </div>
    <div
      class="mx_DeviceTile_info"
    >
      <h4
        class="mx_Heading_h4"
      >
        123
      </h4>
      <div
        class="mx_DeviceTile_metadata"
      >
        <span
          data-testid="device-metadata-isVerified"
        >
          Unverified
        </span>
         · 
        <span
          data-testid="device-metadata-deviceId"
        >
          123
        </span>
      </div>
    </div>
    <div
      class="mx_DeviceTile_actions"
    />
  </div>
</div>
`;

exports[`<DeviceTile /> renders a verified device with no metadata 1`] = `
<div>
  <div
    class="mx_DeviceTile"
    data-testid="device-tile-123"
  >
    <div
      class="mx_DeviceTypeIcon"
    >
      <div
        class="mx_DeviceTypeIcon_deviceIconWrapper"
      >
        <svg
          aria-label="Unknown session type"
          class="mx_DeviceTypeIcon_deviceIcon"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 20q-.625 0-1.062-.437A1.45 1.45 0 0 1 2 18.5q0-.625.438-1.062A1.45 1.45 0 0 1 3.5 17H4V6q0-.824.588-1.412A1.93 1.93 0 0 1 6 4h14q.424 0 .712.287Q21 4.576 21 5t-.288.713A.97.97 0 0 1 20 6H6v11h4.5q.624 0 1.063.438.437.437.437 1.062t-.437 1.063A1.45 1.45 0 0 1 10.5 20zM15 20a.97.97 0 0 1-.713-.288A.97.97 0 0 1 14 19V9q0-.424.287-.713A.97.97 0 0 1 15 8h6q.424 0 .712.287Q22 8.576 22 9v10q0 .424-.288.712A.97.97 0 0 1 21 20zm1-3h4v-7h-4z"
          />
        </svg>
      </div>
      <svg
        aria-label="Unverified"
        class="mx_DeviceTypeIcon_verificationIcon unverified"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
        />
      </svg>
    </div>
    <div
      class="mx_DeviceTile_info"
    >
      <h4
        class="mx_Heading_h4"
      >
        123
      </h4>
      <div
        class="mx_DeviceTile_metadata"
      >
        <span
          data-testid="device-metadata-isVerified"
        >
          Unverified
        </span>
         · 
        <span
          data-testid="device-metadata-deviceId"
        >
          123
        </span>
      </div>
    </div>
    <div
      class="mx_DeviceTile_actions"
    />
  </div>
</div>
`;

exports[`<DeviceTile /> renders display name with a tooltip 1`] = `
<div>
  <div
    class="mx_DeviceTile"
    data-testid="device-tile-123"
  >
    <div
      class="mx_DeviceTypeIcon"
    >
      <div
        class="mx_DeviceTypeIcon_deviceIconWrapper"
      >
        <svg
          aria-label="Unknown session type"
          class="mx_DeviceTypeIcon_deviceIcon"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 20q-.625 0-1.062-.437A1.45 1.45 0 0 1 2 18.5q0-.625.438-1.062A1.45 1.45 0 0 1 3.5 17H4V6q0-.824.588-1.412A1.93 1.93 0 0 1 6 4h14q.424 0 .712.287Q21 4.576 21 5t-.288.713A.97.97 0 0 1 20 6H6v11h4.5q.624 0 1.063.438.437.437.437 1.062t-.437 1.063A1.45 1.45 0 0 1 10.5 20zM15 20a.97.97 0 0 1-.713-.288A.97.97 0 0 1 14 19V9q0-.424.287-.713A.97.97 0 0 1 15 8h6q.424 0 .712.287Q22 8.576 22 9v10q0 .424-.288.712A.97.97 0 0 1 21 20zm1-3h4v-7h-4z"
          />
        </svg>
      </div>
      <svg
        aria-label="Unverified"
        class="mx_DeviceTypeIcon_verificationIcon unverified"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
        />
      </svg>
    </div>
    <div
      class="mx_DeviceTile_info"
    >
      <h4
        class="mx_Heading_h4"
      >
        My device
      </h4>
      <div
        class="mx_DeviceTile_metadata"
      >
        <span
          data-testid="device-metadata-isVerified"
        >
          Unverified
        </span>
         · 
        <span
          data-testid="device-metadata-deviceId"
        >
          123
        </span>
      </div>
    </div>
    <div
      class="mx_DeviceTile_actions"
    />
  </div>
</div>
`;

exports[`<DeviceTile /> separates metadata with a dot 1`] = `
<div>
  <div
    class="mx_DeviceTile"
    data-testid="device-tile-123"
  >
    <div
      class="mx_DeviceTypeIcon"
    >
      <div
        class="mx_DeviceTypeIcon_deviceIconWrapper"
      >
        <svg
          aria-label="Unknown session type"
          class="mx_DeviceTypeIcon_deviceIcon"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.5 20q-.625 0-1.062-.437A1.45 1.45 0 0 1 2 18.5q0-.625.438-1.062A1.45 1.45 0 0 1 3.5 17H4V6q0-.824.588-1.412A1.93 1.93 0 0 1 6 4h14q.424 0 .712.287Q21 4.576 21 5t-.288.713A.97.97 0 0 1 20 6H6v11h4.5q.624 0 1.063.438.437.437.437 1.062t-.437 1.063A1.45 1.45 0 0 1 10.5 20zM15 20a.97.97 0 0 1-.713-.288A.97.97 0 0 1 14 19V9q0-.424.287-.713A.97.97 0 0 1 15 8h6q.424 0 .712.287Q22 8.576 22 9v10q0 .424-.288.712A.97.97 0 0 1 21 20zm1-3h4v-7h-4z"
          />
        </svg>
      </div>
      <svg
        aria-label="Unverified"
        class="mx_DeviceTypeIcon_verificationIcon unverified"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
        />
      </svg>
    </div>
    <div
      class="mx_DeviceTile_info"
    >
      <h4
        class="mx_Heading_h4"
      >
        123
      </h4>
      <div
        class="mx_DeviceTile_metadata"
      >
        <span
          data-testid="device-metadata-isVerified"
        >
          Unverified
        </span>
         · 
        <span
          data-testid="device-metadata-lastActivity"
        >
          Last activity 15:13
        </span>
         · 
        <span
          data-testid="device-metadata-lastSeenIp"
        >
          1.2.3.4
        </span>
         · 
        <span
          data-testid="device-metadata-deviceId"
        >
          123
        </span>
      </div>
    </div>
    <div
      class="mx_DeviceTile_actions"
    />
  </div>
</div>
`;
